--- a/products.html
+++ b/products.html
@@ -22,11 +22,13 @@
             <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./about.html">About</a>
             <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./contact.html">Contact Us</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
+          <a href="./contact.html">
+            <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </button>
+          </a>
         </div>
       </header>
 
@@ -54,7 +56,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product3.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://rukminim2.flixcart.com/image/416/416/ksxjs7k0/hair-treatment/5/1/v/400-reetha-amla-shikakai-powder-for-hairs-400g-online-quality-original-imag6e4mmfxnpq9g.jpeg?q=70">
               </a>
               <div class="mt-4">
@@ -64,7 +66,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product4.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://rukminim2.flixcart.com/image/416/416/kjvrdzk0/shampoo/b/i/g/1000-herbal-shampoo-amla-shikakai-with-reetha-1000-ml-ayur-original-imafzcpucmsx4xcq.jpeg?q=70">
               </a>
               <div class="mt-4">
@@ -74,7 +76,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product5.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://rukminim2.flixcart.com/image/416/416/k5si2kw0/soap/p/z/f/1-200-exfoliating-coffee-handmade-soap-100gms-each-pack-of-2-original-imafze5hhutfdzyr.jpeg?q=70">
               </a>
               <div class="mt-4">
@@ -84,7 +86,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product6.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://rukminim2.flixcart.com/image/416/416/klb78nk0/soap/o/w/z/1-100-vetiver-soap-rustic-art-original-imagygp7zgb3zqrt.jpeg?q=70">
               </a>
               <div class="mt-4">
@@ -94,7 +96,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product7.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://rukminim2.flixcart.com/image/832/832/xif0q/small-travel-bag/j/e/i/-original-imagrcjkkbshzhmm.jpeg?q=70">
               </a>
               <div class="mt-4">
@@ -104,7 +106,7 @@
               </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-              <a class="block relative h-48 rounded overflow-hidden">
+              <a class="block relative h-48 rounded overflow-hidden" href="./product8.html">
                 <img alt="ecommerce" class="object-contain object-center w-full h-full block" src="https://m.media-amazon.com/images/I/51ETruPmXWL._SX679_.jpg">
               </a>
               <div class="mt-4">
