--- a/about.html
+++ b/about.html
@@ -23,11 +23,13 @@
             <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./about.html">About</a>
             <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./contact.html">Contact Us</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
+          <a href="./contact.html">
+            <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </button>
+          </a>
         </div>
       </header>
     <section class="text-gray-600 body-font">
@@ -36,9 +38,6 @@
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Discover a World of Sustainable Choices</h1>
             <p class="mb-8 leading-relaxed">Welcome to Planet Sustain, where you'll find a world of sustainable choices at your fingertips. We've made it our mission to offer a thoughtfully curated selection of eco-friendly products that empower you to make a positive impact on the planet with every purchase. Our commitment to sustainability runs deep, and we source products that are not only environmentally responsible but also designed to enhance your life. Whether you're looking to reduce your carbon footprint, support ethical practices, or simply live a healthier, eco-conscious lifestyle, we have you covered. Join us in embracing a greener way of living and discover the power of sustainable choices at Planet Sustain.</p>
-            <div class="flex justify-center">
-              <button class="inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Shop now</button>
-            </div>
           </div>
         </div>
       </section>
