--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
                 <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./about.html">About</a>
                 <a class="mr-5 hover:text-gray-900 ml-3 text-xl" href="./contact.html">Contact Us</a>
               </nav>
-              <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>
-              </button>
+              <a href="./contact.html">
+                <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Get in touch
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </button>
+              </a>
             </div>
           </header>
     
@@ -44,8 +46,11 @@
                     Shop Responsibly. Live Sustainably.
                     Together, We Nurture Our Planet.</p>
                 <div class="flex justify-center">
-                  <button class="inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Shop now</button>
-                  <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Why us?</button>
+                  <a href="./products.html"><button class="inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Shop now</button>
+                  </a>
+                  <a href="./about.html">
+                    <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Why us?</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -114,7 +119,9 @@
                   </div>
                 </div>
               </div>
-              <button class="flex mx-auto mt-16 text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Shop</button>
+              <a href="./products.html">
+                <button class="flex mx-auto mt-16 text-white bg-yellow-500 border-0 py-2 px-8 focus:outline-none hover:bg-yellow-600 rounded text-lg">Shop</button>
+              </a>
             </div>
           </section>
     </div>
