--- a/product1.html
+++ b/product1.html
@@ -73,13 +73,17 @@
                   </a>
                 </span>
               </div>
-              <p class="leading-relaxed">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
+              <p class="leading-relaxed">
+                Ideal For Men & Women
+                Composition :
+                Organic Sesame oil infused with herbs of laksha, manjishtha, madhuyashtika, kaliyaka, usheera, padmaka etc as per ayurvedic recipe of Kumkumadi oil; Palm Oil, Castor Oil, Organic Coconut Oil, Organic Mahua Oil, Pure Kashmiri Saffron, Powdered Vetiver, Powdered Almond, Fresh Aloevera gel,Purified Water, Lye, Pure Essential Oils of Jasmine, Vetiver, Peppermint, Sandalwood, Rosewood.
+                Skin Type  : All Skin Types</p>
               <div class="flex mt-6 items-center pb-5 border-b-2 border-gray-100 mb-5">
 
               </div>
               <div class="flex">
                 <span class="title-font font-medium text-2xl text-gray-900">INR 200.00</span>
-                <button class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">Buy Now</button>
+                <button class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded" onclick="order()">Buy Now</button>
                 <button class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 ml-4">
                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                     <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"></path>
@@ -90,6 +94,9 @@
           </div>
         </div>
       </section>
+
+      <script src="./script.js"></script>
+
 </body>
 
 </html>
